add Imprint and Legal Notice

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,10 @@
 <section>
   <div>
     <p>Bünyamin</p>
-    <span class="desktop">Impressum</span>
+    <div class="links">
+      <a routerLink="imprint" class="desktop">Imprint</a>
+      <a routerLink="legal-notice" class="desktop">Legal-notice</a>
+    </div>
   </div>
   <span>© Bünyamin Altan 2023</span>
   <div class="icon-container">
@@ -16,4 +19,5 @@
     </a>
   </div>
   <p class="mobile">Impressum</p>
+  <p class=""></p>
 </section>
