--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <section id="greeting">
   <div class="background-effect">
     <img class="image red" src="../assets/images/greeting/Red.png" />
@@ -37,3 +39,9 @@
     />
   </div>
 </section>
+
+<app-about-me></app-about-me>
+<app-skill-stack> </app-skill-stack>
+<app-projects></app-projects>
+<app-contact></app-contact>
+<app-footer></app-footer>
