--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-greeting></app-greeting>
-<app-about-me></app-about-me>
-<app-skill-stack> </app-skill-stack>
-<app-projects></app-projects>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
