--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -79,21 +79,43 @@ a {
 }
 
 .dropdown-menu {
-    position: absolute;
-    top: 0;
     height: 100vh;
     width: 100vw;
-    left: 0;
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.845);
     overflow: hidden;
     display: none;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(50%, -50%);
+    animation: test 0.3s ease-in-out forwards;
 }
+
+@keyframes test {
+    0% {
+        transform: translate(50%, -50%);
+    }
+    25% {
+        transform: translate(25%, -50%);
+    }
+    50% {
+        transform: translate(0%, -50%);
+    }
+    75% {
+        transform: translate(-25%, -50%);
+    }
+    100% {
+        transform: translate(-50%, -50%);
+    }
+}
+
 .d-flex {
     display: flex;
 }
+
 .responsiv-nav {
     display: flex;
     flex-direction: column;
@@ -104,4 +126,19 @@ a {
 
 .show {
     display: flex;
+}
+
+.close-img {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    top: 15px;
+    right: 23px;
+    background-color: none;
+    background: none;
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
 }
