--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ body {
     font-family: "Poppins";
     font-size: 17px;
     color: #fff;
-    background: #141d2f;
+    background: var(--blue);
 }
 
 .d-none {
