--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,6 +2,8 @@
   <div>
     <p>Bünyamin</p>
     <div class="links">
+      <p routerLink="imprint" class="mobile">Impressum</p>
+      <p routerLink="legal-notice" class="mobile">legal-notice</p>
       <a routerLink="imprint" class="desktop">Imprint</a>
       <a routerLink="legal-notice" class="desktop">Legal-notice</a>
     </div>
@@ -18,6 +20,4 @@
       <img src="../assets/images/greeting/Vector (5).svg" alt="" />
     </a>
   </div>
-  <p class="mobile">Impressum</p>
-  <p class=""></p>
 </section>
