change stuff add logo

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,6 @@
 <section>
   <div>
-    <p>Bünyamin</p>
     <div class="links">
-      <p routerLink="imprint" class="mobile">Impressum</p>
-      <p routerLink="legal-notice" class="mobile">legal-notice</p>
       <a routerLink="imprint" class="desktop">Imprint</a>
       <a routerLink="legal-notice" class="desktop">Legal-notice</a>
     </div>
@@ -20,4 +17,5 @@
       <img src="../assets/images/greeting/Vector (5).svg" alt="" />
     </a>
   </div>
+  <img class="logo" src="../assets/images/header/LogoMakr-30xL5p.png" />
 </section>
