--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,13 @@
 <header>
   <div class="header__content">
     <div class="title">
-      <span class="logo-name">Bünyami</span
-      ><span style="color: #e86f00; font-size: 18px" class="">n</span>
+      <img
+        class="logo"
+        src="../assets/images/header/LogoMakr-30xL5p.png"
+        (click)="playSound()"
+      />
+      <!-- <span class="logo-name">Bünyami</span
+      ><span style="color: #e86f00; font-size: 18px" class="">n</span> -->
     </div>
     <nav class="navbar d-none">
       <a href="#">Home</a>
