--- a/src/app/skill-stack/skill-stack.component.html
+++ b/src/app/skill-stack/skill-stack.component.html
@@ -9,8 +9,8 @@
       <img src="../assets/images/skill-stack/Vector 1 (1).svg" />
     </div>
     <div class="text__content">
-      I have gained experience in building projects with various front end
-      technologies and concepts.
+      I have gained experience in Work and building projects with various front
+      end technologies and concepts.
     </div>
     <div class="left-side">
       <div class="row">
