--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,7 @@ header {
     backdrop-filter: blur(32.5px);
     top: -1px;
     z-index: 999;
-    height: 40px;
+    height: 60px;
     width: 100%;
     overflow: hidden;
 }
@@ -62,6 +62,7 @@ a {
 @media (max-width: 1000px) {
     .responsiv-icon {
         display: block;
+        cursor: pointer;
     }
     .navbar {
         display: none;
@@ -94,24 +95,6 @@ a {
     animation: test 0.3s ease-in-out forwards;
 }
 
-@keyframes test {
-    0% {
-        transform: translate(50%, -50%);
-    }
-    25% {
-        transform: translate(25%, -50%);
-    }
-    50% {
-        transform: translate(0%, -50%);
-    }
-    75% {
-        transform: translate(-25%, -50%);
-    }
-    100% {
-        transform: translate(-50%, -50%);
-    }
-}
-
 .d-flex {
     display: flex;
 }
@@ -140,5 +123,44 @@ a {
     &:hover {
         cursor: pointer;
         transform: scale(1.1);
+    }
+}
+
+.logo {
+    width: 40px;
+}
+.logo:hover {
+    animation: shake 1s infinite;
+}
+
+// Animations
+
+// for left img
+@keyframes shake {
+    0%,
+    100% {
+        transform: rotate(5deg);
+    }
+    50% {
+        transform: rotate(-15deg);
+    }
+}
+
+// for right img
+@keyframes test {
+    0% {
+        transform: translate(50%, -50%);
+    }
+    25% {
+        transform: translate(25%, -50%);
+    }
+    50% {
+        transform: translate(0%, -50%);
+    }
+    75% {
+        transform: translate(-25%, -50%);
+    }
+    100% {
+        transform: translate(-50%, -50%);
     }
 }
