add new scroll function with service

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="#contact">
+<section id="contact">
   <div class="title">
     <h2>Contact</h2>
     <img src="../assets/images/contact/LINE 4.svg" />
