--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,6 +20,6 @@
   <img class="logo" src="../assets/images/header/LogoMakr-30xL5p.png" />
 
   <span class="bottom-text" style="font-size: 10px">
-    Created my free logo at <a>LogoMakr.com</a>
+    Created my free logo at <a href="https://LogoMakr.com">LogoMakr.com</a>
   </span>
 </section>
