--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,12 @@ a {
 html {
     overflow-x: hidden;
 
-    font-family: "Poppins";
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
 body {
+    font-family: "poppins";
+
     overflow-y: auto;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
@@ -23,7 +24,6 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
-    font-family: "Poppins";
     font-size: 17px;
     color: #fff;
     background: var(--blue);
@@ -38,6 +38,8 @@ body {
 }
 
 textarea:focus,
-input:focus {
+input:focus,
+a:focus {
     outline: none;
+    text-decoration: none;
 }
