--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,13 +7,13 @@
   </div>
   <span>© Bünyamin Altan 2023</span>
   <div class="icon-container">
-    <a href="https://github.com/atnbn">
+    <a target="_blank" href="https://github.com/atnbn">
       <img src="../assets/images/greeting/Vector (7).svg" alt="" />
     </a>
-    <a href="mailto:atnb.developer@gmail.com">
+    <a target="_blank" href="mailto:atnb.developer@gmail.com">
       <img src="../assets/images/greeting/Vector (6).svg" alt="" />
     </a>
-    <a href="https://linkedin.com/in/bünyamin-altan-932322243">
+    <a target="_blank" href="https://linkedin.com/in/bünyamin-altan-932322243">
       <img src="../assets/images/greeting/Vector (5).svg" alt="" />
     </a>
   </div>
