--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -25,13 +25,13 @@
   </div>
   <div class="icon-container">
     <img class="orange-line" src="../assets/images/greeting/orange-line.png" />
-    <a href="https://github.com/atnbn">
+    <a target="_blank" href="https://github.com/atnbn">
       <img class="icon" src="../assets/images/greeting/Vector (7).svg" />
     </a>
-    <a href="mailto:atnb.developer@gmail.com">
+    <a target="_blank" href="mailto:atnb.developer@gmail.com">
       <img class="icon" src="../assets/images/greeting/Vector (6).svg" />
     </a>
-    <a href="https://linkedin.com/in/bünyamin-altan-932322243">
+    <a target="_blank" href="https://linkedin.com/in/bünyamin-altan-932322243">
       <img class="icon" src="../assets/images/greeting/Vector (5).svg" />
     </a>
   </div>
