--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: poppins;
-    src: url(/fonts/poppins-v20-latin-300.eot);
+    src: url(fonts/poppins-v20-latin-300.ttf);
 }
