--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@
     --blue: #141d2f;
 }
 
+@font-face {
+    font-family: poppins;
+    src: url(fonts/poppins-v20-latin-700.ttf);
+}
+
 a {
     text-decoration: none;
     color: inherit;
