--- a/src/app/greeting/greeting.component.scss
+++ b/src/app/greeting/greeting.component.scss
@@ -110,7 +110,7 @@ section {
 .icon-container {
     width: 100vw;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: 15px;
     position: absolute;
