--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,47 +12,45 @@
     </div>
   </div>
   <div class="projects">
+    <!-- Forkify -->
     <div class="project">
-      <img src="../assets/images/projects/Pictures (PC mock up) cut.png" />
+      <a href="https://forkify-bnym.netlify.app" target="_blank">
+        <img src="../assets/images/projects/Forkify.png" />
+      </a>
       <div class="description">
-        <h3>El Polo Loco</h3>
-        <span class="text-stack">JavaScript | HTML | CSS</span>
+        <h3>Forkify</h3>
+        <span class="text-stack">JavaScript | HTML | SCSS</span>
         <span>
-          Jump, run and throw game based on object-oriented approach.Help Pepe
-          to find coins and tabasco salsa to fight against hte crazy hen.</span
-        >
+          Recipe Site where you can search for recipes and upload your own.
+        </span>
         <div class="buttons">
-          <a
-            href="https://buenyamin-altan.developerakademie.com/Modul%2011/index.html"
-            target="_blank"
-          >
+          <a href="https://forkify-bnym.netlify.app" target="_blank">
             <button class="test-btn">Live Test</button></a
           >
-          <a target="_blank" href="https://github.com/atnbn/Ringoffire">
+          <a target="_blank" href="https://github.com/atnbn/Forkify">
             <button class="github-btn">Github</button></a
           >
         </div>
       </div>
     </div>
 
-    <!--  Join -->
+    <!--  Project Space -->
     <div class="project row-reverse">
-      <img src="../assets/images/projects/join.png" />
+      <a target="_blank" href="https://atnbn.github.io/projectSpace/#/home">
+        <img src="../assets/images/projects/space-work.png" />
+      </a>
       <div class="description">
-        <h3>Join</h3>
-        <span class="text-stack">JavaScript | HTML | CSS</span>
+        <h3>Project Space</h3>
+        <span class="text-stack">Angular | TypeScript | HTML | SCSS</span>
         <span
-          >Task manager inspired by the Kanban System. Create and organize tasks
-          using drag and drop functions, assign users and categories.</span
+          >A Website build with Angular and SCSS demonstrating my SCSS Angular
+          skills.</span
         >
         <div class="buttons">
-          <a
-            target="_blank"
-            href="https://buenyamin-altan.developerakademie.com/Kanban-/html/login.html"
-          >
+          <a target="_blank" href="https://atnbn.github.io/projectSpace/#/home">
             <button class="test-btn">Live Test</button></a
           >
-          <a target="_blank" href="https://github.com/atnbn/Kanban-Projekt">
+          <a target="_blank" href="https://github.com/atnbn/projectSpace">
             <button class="github-btn">Github</button></a
           >
         </div>
@@ -61,7 +59,9 @@
     <!--  Ring of Fiire -->
     <div class="project">
       <!-- <img src="../assets/images/projects/Pictures (PC mock up).png" /> -->
-      <img src="../assets/images/projects/Ring of fire.png" />
+      <a target="_blank" href="https://ring-of-fire-2c176.web.app">
+        <img src="../assets/images/projects/Ring of fire.png" />
+      </a>
       <div class="description">
         <h3>Ring of Fire</h3>
         <span class="text-stack"
@@ -84,7 +84,9 @@
     <!-- Slack -->
     <div class="project row-reverse">
       <!-- <img src="../assets/images/projects/Pictures (PC mock up).png" /> -->
-      <img src="../assets/images/projects/Slack clone.png" />
+      <a target="_blank" href="https://slack-clone-c2cbe.web.app/login">
+        <img src="../assets/images/projects/Slack clone.png" />
+      </a>
       <div class="description">
         <h3>Slack Clone</h3>
         <span class="text-stack"
