--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -14,7 +14,7 @@
   <div class="projects">
     <!-- Forkify -->
     <div class="project">
-      <a href="https://forkify-bnym.netlify.app" target="_blank">
+      <a href="https://silver-begonia-2336f4.netlify.app/" target="_blank">
         <img src="../assets/images/projects/Forkify.png" />
       </a>
       <div class="description">
@@ -24,7 +24,7 @@
           Recipe Site where you can search for recipes and upload your own.
         </span>
         <div class="buttons">
-          <a href="https://forkify-bnym.netlify.app" target="_blank">
+          <a href="https://silver-begonia-2336f4.netlify.app/" target="_blank">
             <button class="test-btn">Live Test</button></a
           >
           <a target="_blank" href="https://github.com/atnbn/Forkify">
@@ -34,23 +34,25 @@
       </div>
     </div>
 
-    <!--  Project Space -->
+    <!--  Kanban -->
     <div class="project row-reverse">
-      <a target="_blank" href="https://atnbn.github.io/projectSpace/#/home">
-        <img src="../assets/images/projects/space-work.png" />
+      <a target="_blank" href="https://kanban-azure-kappa.vercel.app/#/">
+        <img src="../assets/images/projects/Kanban.png" />
       </a>
       <div class="description">
         <h3>Project Space</h3>
-        <span class="text-stack">Angular | TypeScript | HTML | SCSS</span>
+        <span class="text-stack"
+          >Angular | TypeScript | HTML | SCSS | Node.js | MongoDB</span
+        >
         <span
-          >A Website build with Angular and SCSS demonstrating my SCSS Angular
-          skills.</span
+          >A Fullstack application build with Angular and Node.Js to manage your
+          projects and tasks.</span
         >
         <div class="buttons">
-          <a target="_blank" href="https://atnbn.github.io/projectSpace/#/home">
-            <button class="test-btn">Live Test</button></a
+          <a target="_blank" href="https://kanban-azure-kappa.vercel.app/#/"
+            >< <button class="test-btn">Live Test</button></a
           >
-          <a target="_blank" href="https://github.com/atnbn/projectSpace">
+          <a target="_blank" href="https://github.com/atnbn/Kanban">
             <button class="github-btn">Github</button></a
           >
         </div>
