--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -40,7 +40,7 @@
         <img src="../assets/images/projects/Kanban.png" />
       </a>
       <div class="description">
-        <h3>Project Space</h3>
+        <h3>Kanban Board</h3>
         <span class="text-stack"
           >Angular | TypeScript | HTML | SCSS | Node.js | MongoDB</span
         >
@@ -49,8 +49,8 @@
           projects and tasks.</span
         >
         <div class="buttons">
-          <a target="_blank" href="https://kanban-azure-kappa.vercel.app/#/"
-            >< <button class="test-btn">Live Test</button></a
+          <a target="_blank" href="https://kanban-azure-kappa.vercel.app/#/">
+            <button class="test-btn">Live Test</button></a
           >
           <a target="_blank" href="https://github.com/atnbn/Kanban">
             <button class="github-btn">Github</button></a
