--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,18 +8,14 @@
   <span>© Bünyamin Altan 2023</span>
   <div class="icon-container">
     <a href="https://github.com/atnbn">
-      <img src="../assets/images/greeting/Vector (7).svg" alt="" />
+      <img src="assets/images/greeting/Vector (7).svg" alt="" />
     </a>
     <a href="mailto:atnb.developer@gmail.com">
-      <img src="../assets/images/greeting/Vector (6).svg" alt="" />
+      <img src="assets/images/greeting/Vector (6).svg" alt="" />
     </a>
     <a href="https://linkedin.com/in/bünyamin-altan-932322243">
-      <img src="../assets/images/greeting/Vector (5).svg" alt="" />
+      <img src="assets/images/greeting/Vector (5).svg" alt="" />
     </a>
   </div>
-  <img class="logo" src="../assets/images/header/LogoMakr-30xL5p.png" />
-
-  <span class="bottom-text" style="font-size: 10px">
-    Created my free logo at <a href="https://LogoMakr.com">LogoMakr.com</a>
-  </span>
+  <img class="logo" src="assets/images/header/logo.png" />
 </section>
