--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -2,8 +2,8 @@
 
 <section id="greeting">
   <div class="background-effect">
-    <img class="image red" src="../assets/images/greeting/Red.png" />
-    <img class="image purp" src="../assets/images/greeting/Magenta.png" />
+    <img class="image red" src="assets/images/greeting/Red.png" />
+    <img class="image purp" src="assets/images/greeting/Magenta.png" />
   </div>
   <div class="greeting">
     <div class="rotate-container">
@@ -24,24 +24,21 @@
     </button>
   </div>
   <div class="icon-container">
-    <img class="orange-line" src="../assets/images/greeting/orange-line.png" />
+    <img class="orange-line" src="assets/images/greeting/orange-line.png" />
     <a href="https://github.com/atnbn">
-      <img class="icon" src="../assets/images/greeting/Vector (7).svg" />
+      <img class="icon" src="assets/images/greeting/Vector (7).svg" />
     </a>
     <a href="mailto:atnb.developer@gmail.com">
-      <img class="icon" src="../assets/images/greeting/Vector (6).svg" />
+      <img class="icon" src="assets/images/greeting/Vector (6).svg" />
     </a>
     <a href="https://linkedin.com/in/bünyamin-altan-932322243">
-      <img class="icon" src="../assets/images/greeting/Vector (5).svg" />
+      <img class="icon" src="assets/images/greeting/Vector (5).svg" />
     </a>
   </div>
 
   <div class="scroll-down-container">
     <span class="scroll-down-text">Scroll down</span>
-    <img
-      class="scroll-down-icon"
-      src="../assets/images/greeting/arrow-down.svg"
-    />
+    <img class="scroll-down-icon" src="assets/images/greeting/arrow-down.svg" />
   </div>
 </section>
 
