--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="title">
       <img
         class="logo"
-        src="../assets/images/header/LogoMakr-30xL5p.png"
+        src="assets/images/header/logo.png"
         (click)="playSound()"
       />
     </div>
@@ -20,7 +20,7 @@
 
     <img
       class="responsiv-icon"
-      src="../assets/images/header/responsiv-menu.png"
+      src="assets/images/header/responsiv-menu.png"
       (click)="openDropDown()"
     />
   </div>
@@ -30,7 +30,7 @@
   <img
     (click)="closeDropDownWithoutLink()"
     class="close-img"
-    src="../assets/images/header/x-mark-16.png"
+    src="assets/images/header/x-mark-16.png"
     alt=""
   />
   <div class="responsiv-nav">
