--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <section id="projects">
   <div class="title__container">
     <div class="title__content">
-      <img src="../assets/images/projects/LINE 3.svg" />
+      <img src="assets/images/projects/LINE 3.svg" />
       <div class="text-title">
         <h2>Portfolio</h2>
         <span>
@@ -15,7 +15,7 @@
     <!-- Forkify -->
     <div class="project">
       <a href="https://silver-begonia-2336f4.netlify.app/" target="_blank">
-        <img src="../assets/images/projects/Forkify.png" />
+        <img src="assets/images/projects/Forkify.png" />
       </a>
       <div class="description">
         <h3>Forkify</h3>
@@ -37,7 +37,7 @@
     <!--  Kanban -->
     <div class="project row-reverse">
       <a target="_blank" href="https://kanban-azure-kappa.vercel.app/#/">
-        <img src="../assets/images/projects/Kanban.png" />
+        <img src="assets/images/projects/Kanban.png" />
       </a>
       <div class="description">
         <h3>Kanban Board</h3>
@@ -60,9 +60,9 @@
     </div>
     <!--  Ring of Fiire -->
     <div class="project">
-      <!-- <img src="../assets/images/projects/Pictures (PC mock up).png" /> -->
+      <!-- <img src="assets/images/projects/Pictures (PC mock up).png" /> -->
       <a target="_blank" href="https://ring-of-fire-2c176.web.app">
-        <img src="../assets/images/projects/Ring of fire.png" />
+        <img src="assets/images/projects/Ring of fire.png" />
       </a>
       <div class="description">
         <h3>Ring of Fire</h3>
@@ -85,9 +85,9 @@
     </div>
     <!-- Slack -->
     <div class="project row-reverse">
-      <!-- <img src="../assets/images/projects/Pictures (PC mock up).png" /> -->
+      <!-- <img src="assets/images/projects/Pictures (PC mock up).png" /> -->
       <a target="_blank" href="https://slack-clone-c2cbe.web.app/login">
-        <img src="../assets/images/projects/Slack clone.png" />
+        <img src="assets/images/projects/Slack clone.png" />
       </a>
       <div class="description">
         <h3>Slack Clone</h3>
@@ -115,7 +115,7 @@
 </section>
 
 <!-- <div class="project">
-      <img src="../assets/images/projects/Pictures (PC mock up).png" />
+      <img src="assets/images/projects/Pictures (PC mock up).png" />
       <div class="bottom-con">
         <button class="github-btn">Git hub</button><button>Live test</button>
       </div>
