--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,21 +4,21 @@
     <div class="image-container">
       <img
         class="img-person"
-        src="../assets/images/about-me/Portfolio Bild cut.png"
+        src="assets/images/about-me/Portfolio Bild cut.png"
         alt=""
       />
       <img
         class="img-background right-img"
-        src="../assets/images/about-me/Purple shadow (2).svg"
+        src="assets/images/about-me/Purple shadow (2).svg"
       />
       <img
         class="img-background left-img"
-        src="../assets/images/about-me/orange shadow.svg"
+        src="assets/images/about-me/orange shadow.svg"
       />
     </div>
     <div class="about-me__content">
       <img
-        src="../assets/images/about-me/background-slide.png"
+        src="assets/images/about-me/background-slide.png"
         class="background-slide"
       />
       <div class="text">
@@ -29,7 +29,7 @@
           appealing and user-friendly interfaces.
         </span>
         <div class="icon-text">
-          <img src="../assets/images/about-me/cube-icon.svg" />
+          <img src="assets/images/about-me/cube-icon.svg" />
           <span
             >I discovered my love for programming about a year ago, and it has
             been a passion of mine ever since. Growing up, I always had an
@@ -38,7 +38,7 @@
           </span>
         </div>
         <div class="icon-text">
-          <img src="../assets/images/about-me/puzzle-icon.svg" />
+          <img src="assets/images/about-me/puzzle-icon.svg" />
           <span
             >To further my skills and gain practical experience, I enrolled in
             Developer Academy. Throughout my time there, I had the opportunity
@@ -49,9 +49,3 @@
     </div>
   </div>
 </section>
-
-<!-- I first discovered my interest in frontend development while in college, and since then have dedicated my time to learning as much as possible about the subject. To improve my skills, I have completed various online courses and tutorials, as well as participated in hackathons and coding competitions.
-
-As a hobbyist frontend developer, I have developed a number of projects and apps that demonstrate my capabilities and attention to detail. I have also contributed to open source projects and joined online communities to share my knowledge and learn from others.
-
-I am now ready to turn my love for frontend development into a career and am excited to explore the many opportunities available in the field. Whether it's building visually appealing websites or helping others learn to code, I am eager to take on new challenges and make a positive impact through my work. -->
