--- a/src/app/skill-stack/skill-stack.component.html
+++ b/src/app/skill-stack/skill-stack.component.html
@@ -1,12 +1,12 @@
 <section id="skills">
   <img
     class="img-absolute"
-    src="../assets/images/about-me/background-slide cut.png"
+    src="assets/images/about-me/background-slide cut.png"
   />
   <div class="skill-container">
     <div class="title__content">
       <span>Skills</span>
-      <img src="../assets/images/skill-stack/Vector 1 (1).svg" />
+      <img src="assets/images/skill-stack/Vector 1 (1).svg" />
     </div>
     <div class="text__content">
       I have gained experience in Work and building projects with various front
@@ -15,53 +15,53 @@
     <div class="left-side">
       <div class="row">
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/Javascript.svg" />
+          <img class="jump" src="assets/images/skill-stack/Javascript.svg" />
           <span>JavaScript</span>
         </div>
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/Angular.svg" />
+          <img class="jump" src="assets/images/skill-stack/Angular.svg" />
           <span>Angular</span>
         </div>
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/TypeScript.svg" />
+          <img class="jump" src="assets/images/skill-stack/TypeScript.svg" />
           <span>TypeScript</span>
         </div>
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/html.svg" />
+          <img class="jump" src="assets/images/skill-stack/html.svg" />
           <span>HTML</span>
         </div>
       </div>
 
       <div class="row">
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/git.svg" />
+          <img class="jump" src="assets/images/skill-stack/git.svg" />
           <span>Git</span>
         </div>
         <div class="icon-container">
           <img
             class="firebase__icon jump"
-            src="../assets/images/skill-stack/Firebase.svg"
+            src="assets/images/skill-stack/Firebase.svg"
           />
           <span>Firebase</span>
         </div>
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/css.svg" />
+          <img class="jump" src="assets/images/skill-stack/css.svg" />
           <span>Css</span>
         </div>
       </div>
       <div class="row">
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/scrum.svg" />
+          <img class="jump" src="assets/images/skill-stack/scrum.svg" />
           <span>Scrum</span>
         </div>
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/Api.svg" />
+          <img class="jump" src="assets/images/skill-stack/Api.svg" />
           <span>Api</span>
         </div>
       </div>
       <div class="row">
         <div class="icon-container">
-          <img class="jump" src="../assets/images/skill-stack/Frame.svg" />
+          <img class="jump" src="assets/images/skill-stack/Frame.svg" />
           <span style="text-align: center"
             >Material <br />
             Design</span
@@ -73,7 +73,7 @@
       <div class="title__content-desktop">
         <div class="title-container">
           <span>Skills</span>
-          <img src="../assets/images/skill-stack/Vector 1 (1).svg" />
+          <img src="assets/images/skill-stack/Vector 1 (1).svg" />
         </div>
         <span>
           I have gained experience in building projects with various front end
