--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,11 @@
 <section id="contact">
   <div class="title">
     <h2>Contact</h2>
-    <img src="../assets/images/contact/LINE 4.svg" />
+    <img src="assets/images/contact/LINE 4.svg" />
   </div>
   <div class="main-content">
     <div class="question-container">
-      <img src="../assets/images/contact/LINE 5.svg" />
+      <img src="assets/images/contact/LINE 5.svg" />
       <h3>Got a problem to solve ?</h3>
       <span>
         Contact me through this form, I am interested in hearing you, knowing
