--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -62,7 +62,7 @@
     <div class="project">
       <!-- <img src="assets/images/projects/Pictures (PC mock up).png" /> -->
       <a target="_blank" href="https://ring-of-fire-2c176.web.app">
-        <img src="assets/images/projects/Ring of fire.png" />
+        <img src="assets/images/projects/Ringoffire.png" />
       </a>
       <div class="description">
         <h3>Ring of Fire</h3>
@@ -87,7 +87,7 @@
     <div class="project row-reverse">
       <!-- <img src="assets/images/projects/Pictures (PC mock up).png" /> -->
       <a target="_blank" href="https://slack-clone-c2cbe.web.app/login">
-        <img src="assets/images/projects/Slack clone.png" />
+        <img src="assets/images/projects/Slack-clone.png" />
       </a>
       <div class="description">
         <h3>Slack Clone</h3>
