--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -11,17 +11,17 @@
     </div>
     <div class="greeting-text">
       <span class="title-name">Bünyamin Altan</span>
-      <span class="title-job">FRONTEND DEVELOPER</span>
+      <span class="title-job">FULL-STACK DEVELOPER</span>
     </div>
   </div>
 
   <div class="button-container">
-    <button
+    <!-- <button
       (click)="this.scrollService.scrollToDesiredAnchor('contact')"
       class="talk-btn"
     >
       let's talk!
-    </button>
+    </button> -->
   </div>
   <div class="icon-container">
     <img class="orange-line" src="assets/images/greeting/orange-line.png" />
@@ -45,5 +45,5 @@
 <app-about-me></app-about-me>
 <app-skill-stack> </app-skill-stack>
 <app-projects></app-projects>
-<app-contact></app-contact>
+<!-- <app-contact></app-contact> -->
 <app-footer></app-footer>
