--- a/src/app/skill-stack/skill-stack.component.html
+++ b/src/app/skill-stack/skill-stack.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="text__content">
       I have gained experience in Work and building projects with various front
-      end technologies and concepts.
+      end and back end technologies and concepts.
     </div>
     <div class="left-side">
       <div class="row">
@@ -48,6 +48,10 @@
           <img class="jump" src="assets/images/skill-stack/css.svg" />
           <span>Css</span>
         </div>
+        <div class="icon-container">
+          <img class="jump" src="assets/images/skill-stack/nodejs-icon.svg" />
+          <span>Node Js </span>
+        </div>
       </div>
       <div class="row">
         <div class="icon-container">
@@ -58,6 +62,13 @@
           <img class="jump" src="assets/images/skill-stack/Api.svg" />
           <span>Api</span>
         </div>
+        <div class="icon-container">
+          <img
+            class="jump"
+            src="assets/images/skill-stack/icons8-c-sharp-logo (1).svg"
+          />
+          <span>C#</span>
+        </div>
       </div>
       <div class="row">
         <div class="icon-container">
@@ -66,6 +77,13 @@
             >Material <br />
             Design</span
           >
+        </div>
+        <div class="icon-container">
+          <img
+            class="jump"
+            src="assets/images/skill-stack/simple-icons--mongodb.svg"
+          />
+          <span style="text-align: center">Mongo DB</span>
         </div>
       </div>
     </div>
