--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="greeting-text">
       <span class="title-name">Bünyamin Altan</span>
-      <span class="title-job">FULL-STACK DEVELOPER</span>
+      <span class="title-job">FRONT-END DEVELOPER</span>
     </div>
   </div>
 
