--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -24,7 +24,7 @@
       <div class="text">
         <h2>About me</h2>
         <span>
-          Hi, I'm a Full-stack developer based in Nürnberg, Germany. I am a
+          Hi, I'm a Front-End developer based in Nürnberg, Germany. I am a
           self-taught programmer with a strong passion for creating visually
           appealing and user-friendly interfaces.
         </span>
